<resources>
    <string name="app_name">Who Stole Santas Beard</string>
    <string name="login_mainTitle">Sign In</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_rememberMe">Remember me</string>
    <string name="login_forgotPassword">Forgot Password?</string>
    <string name="signUp_signUp">Sign Up</string>
</resources>